[package]
name = "bevy-blast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_rapier3d = "0.21.0"
rand = "0.8.5"

[profile.dev.package.bevy_rapier3d]
opt-level = 3

[profile.release]
codegen-units = 1
